<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:ignore="TextFields"
    tools:listitem="@android:layout/simple_list_item_1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/divider_phone_propities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/menu_sell_phone_spinner_mobile_info"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/divider"
                android:orientation="vertical" >
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <AutoCompleteTextView
                android:id="@+id/sell_phone_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/menu_sell_phone_spinner_mobile_info_brand"
                android:textColor="@color/black"
                android:textColorHint="@color/black" >

                <requestFocus />
            </AutoCompleteTextView>

            <EditText
                android:id="@+id/sell_phone_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/menu_sell_phone_spinner_mobile_info_model"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <Spinner
                android:id="@+id/sell_phone_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/sell_phone_more_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/menu_sell_phone_spinner_mobile_info_more_info"
                android:inputType="textMultiLine" />

            <Spinner
                android:id="@+id/sell_phone_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/sell_phone_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/menu_sell_phone_spinner_mobile_info_price"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/divider_contact_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/menu_sell_phone_spinner_contact_info"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/divider"
                android:orientation="vertical" >

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/sell_phone_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/menu_sell_phone_spinner_contact_info_name"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/sell_phone_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/sell_phone_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/menu_sell_phone_spinner_contact_info_phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/sell_phone_other_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/menu_sell_phone_spinner_contact_info_other_phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/sell_phone_e_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/menu_sell_phone_spinner_contact_info_e_mail"
                android:inputType="textEmailAddress" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>