<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/item_results_picture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription=""
        android:src="@drawable/no_image" >
    </ImageView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/item_results_text_brand_and_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/menu_results_search_small_text_hint_brand_and_model"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="0dp" >

            <TextView
                android:id="@+id/item_results_text_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/menu_results_search_small_text_hint_region"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/item_results_text_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/menu_results_search_small_text_hint_state"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <TextView
            android:id="@+id/item_results_text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:hint="@string/menu_results_search_small_text_hint_price" >
        </TextView>
    </LinearLayout>

</LinearLayout>